--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
+    <string name="req_url_download_zip">town/contents/contents.zip</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
