콘텐츠 버전체크까지 완료 로그인로직과 충돌테스트해야함

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="req_url_download_jp">town/contents/jp/jp.json</string>
     <string name="req_url_download_en">town/contents/en/eng.json</string>
     <string name="req_url_download_ch">town/contents/ch/ch.json</string>
+    <string name="req_url_user_check_version">user/check/version</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
