리스트 정렬로직 작업  -2 마을이름,권역별 정렬 로직작업 완료 지자체별로 필요없는 로직은 삭제해야함

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,7 @@
     <string name="present_view_container">선물 신청</string>
     <string name="research_view_container">설문</string>
     <string name="logout_view_container">로그아웃</string>
-
+    <string name="hide_btn">숨김관리</string>
+    <string name="sort_btn">정렬</string>
+    <string name="main_toolbar_title">스탬프</string>
 </resources>
