--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,5 +98,6 @@
     <string name="remove_acoount_success">회원탈퇴 성공</string>
     <string name="more_toolbar_title">더보기</string>
     <string name="map_toolbar_title">지도</string>
+    <string name="stamp_zone_come_message">스탬프 존에 들어왔습니다.</string>
 
 </resources>
