--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -16,4 +16,5 @@
     <string name="more_toolbar_title">더보기</string>
     <string name="map_toolbar_title">지도</string>
     <string name="stamp_zone_come_message">스탬프 존에 들어왔습니다.</string>
+    <string name="hidelist_toolbar_title">숨김관리</string>
 </resources>
