--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,5 +101,6 @@
     <string name="stamp_zone_come_message">스탬프 존에 들어왔습니다.</string>
     <string name="hidelist_toolbar_title">숨김관리</string>
     <string name="btn_undo_hide_text">숨김해체</string>
+    <string name="hide_notfication_text">숨겨졌습니다.</string>
 
 </resources>
