--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,4 +145,6 @@
     <string name="please_duplicate_check">닉네임, 이메일 중복체크를 해주세요.</string>
     <string name="not_equal_password">비밀번호가 일치하지 않습니다.</string>
 
+    <string name="find_id_not_text">아이디를 찾지 못 했습니다</string>
+    <string name="find_pass_not_text">비밀번호를 찾지 못 했습니다</string>
 </resources>
