--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -19,4 +19,5 @@
     <string name="hidelist_toolbar_title">숨김관리</string>
     <string name="btn_undo_hide_text">숨김해체</string>
     <string name="hide_notfication_text">숨겨졌습니다.</string>
+    <string name="not_input_socialuser_password">소셜유저입니다.</string>
 </resources>
