--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -17,7 +17,7 @@
     <string name="map_toolbar_title">지도</string>
     <string name="stamp_zone_come_message">스탬프 존에 들어왔습니다.</string>
     <string name="hidelist_toolbar_title">숨김관리</string>
-    <string name="btn_undo_hide_text">숨김해체</string>
+    <string name="btn_undo_hide_text">숨김해제</string>
     <string name="hide_notfication_text">숨겨졌습니다.</string>
     <string name="not_input_socialuser_password">소셜유저입니다.</string>
     <string name="main_list_item_date">날짜</string>
