공유 수정(텍스트변경)

--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -22,4 +22,5 @@
     <string name="not_input_socialuser_password">소셜유저입니다.</string>
     <string name="main_list_item_date">날짜</string>
     <string name="main_list_item_number">순서</string>
+    <string name="FB_Share_Title2">포천스탬프투어로 이동</string>
 </resources>
