--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -23,4 +23,14 @@
     <string name="main_list_item_date">날짜</string>
     <string name="main_list_item_number">순서</string>
     <string name="FB_Share_Title2">포천스탬프투어로 이동</string>
+    <string name="beverb_string">"님은 "</string>
+    <string name="out_of_string">"명 중 "</string>
+    <string name="rank_string">위</string>
+    <string name="rank_is_string">입니다.</string>
+    <string name="already_taken_string">이미 찍으셨습니다</string>
+    <string name="distance_string">거리</string>
+    <string name="area_string">권역</string>
+    <string name="name_string">이름</string>
+    <string name="downloding_string">필요한 컨텐츠 다운로드중...</string>
+    <string name="verifying_contents_string">콘텐츠 리소스 확인중...</string>
 </resources>
